--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h1 class="display-3 text-white mb-md-4">心動不如馬上行動</h1>
-                            <a href="../album/index.html" class="btn btn-primary">按按鈕可以返回主網頁</a>
+                            <a href="https://lizheng-hao.github.io/ourstory.github.io/" class="btn btn-primary">按按鈕可以返回主網頁</a>
                         </div>
                     </div>
                 </div>
